--- a/vertigo-core/src/test/java/io/vertigo/commons/locale/city-guide_fr_FR.properties
+++ b/vertigo-core/src/test/java/io/vertigo/commons/locale/city-guide_fr_FR.properties
@@ -17,7 +17,7 @@
 # limitations under the License.
 #
 
-#Expressions en franÃ§ais
+#Expressions en français
 HELLO = bonjour
 GOOD_BYE = au revoir
 CITY = ville
