--- a/vertigo-core/src/test/java/io/vertigo/core/locale/data/city-guide_fr.properties
+++ b/vertigo-core/src/test/java/io/vertigo/core/locale/data/city-guide_fr.properties
@@ -17,7 +17,7 @@
 # limitations under the License.
 #
 
-#Expressions en français
+#Expressions en franÃ§ais
 HELLO = bonjour
 GOOD_BYE = au revoir
 CITY = ville
